# monkey-cpp

./: CMakeLists.txt  README.md
.github/workflows/: cmake-single-platform.yml
src/: ast.cc  ast.hh  eval.cc  eval.hh  lexer.cc  lexer.hh  monkey.cc  object.cc  object.hh  parser.cc  parser.hh  token.cc  token.hh  util.cc  util.hh
tests/: CMakeLists.txt  eval_test.cc  lexer_test.cc  parser_test.cc
